# my-resume-site

./: README.md
kang_rust/: Cargo.toml
kang_rust/src/: main.rs
resume/: .eslintrc.cjs  package-lock.json  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
resume/prisma/: schema.prisma
resume/src/: env.mjs
resume/src/components/: about_us_slide.tsx  contact_slide.tsx  intro_slide.tsx  my_profile.tsx  my_profile_mobile.tsx  nav_bar.tsx  services_slide.tsx  time_line_slide.tsx
resume/src/components/admin/: average_session_duration.tsx  average_session_duration_graph.tsx  page_views_card.tsx  page_views_graph.tsx  session_record.tsx  session_record_desktop.tsx  session_record_large.tsx  session_record_mobile.tsx  session_record_small.tsx  session_table.tsx  top_five_ips_table.tsx  total_session_duration.tsx  total_session_duration_graph.tsx  unique_page_views.tsx  unique_page_views_graph.tsx
resume/src/pages/: home.tsx  index.tsx  sandbox.tsx  sessions.tsx
resume/src/pages/admin/: index.tsx
resume/src/pages/api/trpc/: [trpc].ts
resume/src/server/: db.ts
resume/src/server/api/: root.ts  trpc.ts
resume/src/server/api/routers/: contact_us.ts  session.ts
resume/src/styles/: globals.css  profile.module.css  time_line.module.css
resume/src/utils/: api.ts  makeTimestamp.ts
resume/tests/: makeTimestamp.test.ts
