[package]
name = "kang_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
mysql = "24.0.0"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
sqlx-core = "0.6.3"
sqlx-mysql = "0.0.0"
tokio = {version = "1.29.0", features = ["full"]}
